02-aplicacoes/gitlab/gitlab-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitlab-service
  labels:
    name: gitlab-service
spec:
  selector:
    app: gitlab
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: https
      port: 443
      targetPort: 443
    - name: ssh
      port: 22
      targetPort: 22
